--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'patricia-tree/**/*.js' --recursive --timeout 60000 --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.7",
     "crypto-js": "^4.1.1",
-    "hardhat": "^2.12.3"
+    "hardhat": "^2.12.3",
+    "mocha": "^10.2.0"
   }
 }
