--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "chai": "^4.3.7",
     "crypto-js": "^4.1.1",
     "hardhat": "^2.12.3",
