--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.3",
     "axios": "^1.2.2",
     "chai": "^4.3.7",
     "crypto-js": "^4.1.1",
